# walrus

./: BUG_REPORT_ELEMENT_SEGMENT_OFFSET.md  Cargo.toml
.github/workflows/: main.yml
crates/fuzz-utils/: Cargo.toml
crates/fuzz-utils/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/tests/: Cargo.toml  build.rs
crates/tests-utils/: Cargo.toml
crates/tests-utils/src/: lib.rs
crates/tests/tests/: const_expr_mutation.rs  custom_sections.rs  deterministic_type_order.rs  element_segment_global_offset.rs  exception_handling_mutation.rs  gc-builder.rs  gc-delete.rs  gc-types-parse.rs  imported_memories.rs  legacy-exceptions-multivalue-catch.rs  legacy-exceptions-rethrow.rs  legacy-exceptions-throw.rs  legacy-exceptions-try-catch.rs  legacy-exceptions-try-delegate.rs  round_trip.rs  spec-tests.rs  table64_active_segment.rs
crates/tests/tests/round_trip/: anyref1.wat  anyref2.wat  anyref3.wat  atomic.wat  block.wat  br_table.wat  bulk-memory.wat  call-two-params.wat  call.wat  call_2.wat  const.wat  count-to-ten.wat  drop.wat  elem-segments-1.wat  elem-segments-2.wat  elem-segments-3.wat  entry-block-type.wat  fac-multi-value.wat  fac.wat  fuzz-0.wat  gc-array-data-elem.wat  gc-array-instructions.wat  gc-array-types.wat  gc-br-on-cast-concrete.wat  gc-call-ref.wat  gc-concrete-casts.wat  gc-concrete-refs.wat  gc-const-exprs.wat  gc-edge-cases.wat  gc-instructions.wat  gc-partial-rec-group-use.wat  gc-rec-groups.wat  gc-ref-eq.wat  gc-self-ref-types.wat  gc-struct-instructions.wat  gc-struct-types.wat  gc-sub-types.wat  gc-transitive-type-refs.wat  gc-unused-rec-group.wat  gc-unused-struct-type.wat  (+64 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gc-smith.rs  wasm-opt-ttf.rs  watgen.rs
src/: arena_set.rs  const_expr.rs  dot.rs  emit.rs  function_builder.rs  lib.rs  parse.rs  tombstone_arena.rs  ty.rs
src/ir/: mod.rs  traversals.rs
src/module/: config.rs  custom.rs  data.rs  elements.rs  exports.rs  globals.rs  imports.rs  mod.rs  producers.rs  tables.rs  tags.rs  types.rs
src/module/debug/: dwarf.rs  mod.rs
src/module/functions/: mod.rs
src/module/functions/local_function/: context.rs  emit.rs  mod.rs
src/passes/: gc.rs  used.rs
