[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2021"
name = "walrus"
version = "0.26.0"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/rustwasm/walrus"
homepage = "https://github.com/rustwasm/walrus"
documentation = "https://docs.rs/walrus"
description = """
A library for performing WebAssembly transformations
"""

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[dependencies]
anyhow = "1.0"
id-arena = "2.3.0"
leb128 = "0.2.5"
log = "0.4.29"
rayon = { version = "1.11.0", optional = true }
walrus-macro = { path = './crates/macro', version = '=0.26.0' }
wasm-encoder = "0.245.1"
wasmparser = "0.245.1"
gimli = "0.32.0"

[features]
parallel = ['rayon', 'id-arena/rayon']

[dev-dependencies]
env_logger = "0.11.10"
criterion = "0.5.0"

[workspace]
members = [
    "./crates/fuzz-utils",
    "./crates/macro",
    "./crates/tests",
    "./crates/tests-utils",
]
