[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2021"
name = "walrus-fuzz-utils"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1.0"
env_logger = "0.11.3"
rand = { version = "0.8.0", features = ['small_rng'] }
tempfile = "3.1.0"
wasmparser = "0.245.0"
wasm-smith = "0.245.0"
arbitrary = "1.0"
wat = "1.0"

[dependencies.walrus]
path = "../.."

[dependencies.walrus-tests-utils]
path = "../tests-utils"

[dev-dependencies]
