[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2021"
name = "walrus-macro"
version = "0.26.0"
license = "MIT/Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/rustwasm/walrus/tree/crates/macro"
homepage = "https://github.com/rustwasm/walrus"
documentation = "https://docs.rs/walrus-macro"
description = """
Internal macros used by the `walrus` crate, not for public consumption.
"""

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ['extra-traits'] }

[lib]
proc-macro = true
